--- a/new_students.html
+++ b/new_students.html
@@ -24,6 +24,10 @@
       color: darkblue;
     }
 
+    .nav.navbar-nav > li > a {
+      font-size: 18px; /* Set your desired font size here */
+    }
+
     /* Navbar link color */
   .navbar-inverse .navbar-nav > li > a {
     color: gray;
@@ -50,6 +54,11 @@
       grid-template-columns: 1fr 3fr 1fr;
       grid-gap: 20px;
     }
+
+    /* p {
+    display: inline-block;
+    transform: scale(1.1);
+  } */
 
   </style>
 </head>
@@ -99,13 +108,18 @@
                 
                 <div style="margin-top:3%; text-align:justify;">  
           
-          <h2>Suggestions for junior Ph.D. students</h2>
+          <h2>Suggestions for fresh Ph.D. students</h2>
           <h4>General</h4>
-          <p>Pursuing a Ph.D. is a transformative journey and a significant time commitment for anyone. While I don't see myself as an authority or an exemplary figure in this domain, I've been reflecting on my own path and realized there are some insights I would have appreciated knowing sooner. With that in mind, I've compiled the following advice.</a> </p>
-          <p>First, I point to a handbook from prof. Mark Dredze at Hopkins, the content of which I regret not reading earlier: </a> </p> <a href="https://www.cs.jhu.edu/~mdredze/publications/HowtoBeaSuccessfulPhDStudent.1_2.pdf">How to be a successful Ph.D. student</a><br>
+          <p>Ph.D. is very short, it's more about appearing at right location at right time than about who's smarter than whom. While I don't see myself as an authority or an exemplary figure in this domain, I've been reflecting on my own path and realized there are some insights I would have appreciated knowing sooner. With that in mind, I've compiled the following advice.</a> </p>
+          <p>First, I point to a handbook from prof. Mark Dredze at Hopkins, the content of which I regret not reading earlier: </a> 
+            <br>
+            <a href="https://www.cs.jhu.edu/~mdredze/publications/HowtoBeaSuccessfulPhDStudent.1_2.pdf">How to be a successful Ph.D. student</a></p>
+          <p>Mark mentioned additional links at the bottom of his handbook. Here are the ones I believe are particularly noteworthy: </a> 
           <br>
-          <!-- <p>Additional links at the end of the handbook worthing special attention: ``ways-to-fail-a-phd" and ``how-to-email". </a> </p>
-          <br> -->
+          <a href="https://matt.might.net/articles/ways-to-fail-a-phd/">10 easy ways to fail a Ph.D.</a><br>
+          <a href="https://matt.might.net/articles/how-to-email/">How to email</a><br>
+          <a href="https://www.cs.jhu.edu/~jason/advice/how-to-find-research-problems.html">How to find research problems</a></p>
+          <!-- <br> -->
           <p>Second, I stress several misleading suggestions I got from my early years, that I wish I never received.</a> </p>
           <p><i>``Teaching in general is a waste of time for research. You should fulfill the TA requirements with whatever course requiring minimum teaching workload, or TA the same course multiple times."</i></a> </p>
           <p>Teaching helps you learn and boosts research, so give it your all! If you're not sure which class to teach, chill and don't rush in your second year. Unless you need the TA cash, it is a terrible idea to TA the same class multiple times. Mix it up with different courses for more rec letters and cool teaching insights. </a> </p>
@@ -127,7 +141,7 @@
 
           <h4>For those from underrepresented groups</h4>
           <p>Unfortunately, the world can be unjust, with the majority often defining what is considered ``normal" for the rest of us. However, the silver lining is that it's possible to adopt a different viewpoint. This isn't about gaslighting yourself into believing that everything that occurs is fair, but rather about choosing the high road when faced with unfairness. </a><br>
-          <p>I want to point to this profound speech by David Foster, recommended by Bill Gates on LinkedIn: </a> </p> <a href="https://m.youtube.com/watch?v=OsAd4HGJS4o">Your Mind is an Excellend Servant, but a Terrible Master</a><br>
+          <p>I want to point to this profound speech by David Foster, recommended by Bill Gates on LinkedIn: </a> </p> <a href="https://m.youtube.com/watch?v=OsAd4HGJS4o">Your Mind is an Excellend Servant, but a Terrible Master (David Foster)</a><br>
           <br>
           <p>While designing this website, I contemplated adopting a less feminine appearance by not including a photo and refraining from using pink or pastel shades. Perhaps I will get more citations that way. However, I believe that feminism is for everyone, including scientists, and I aim to be a role model for younger female colleagues.</a><br>
 
