--- a/photography.html
+++ b/photography.html
@@ -24,6 +24,10 @@
       color: darkblue;
     }
 
+    .nav.navbar-nav > li > a {
+      font-size: 18px; /* Set your desired font size here */
+    }
+
     /* Navbar link color */
   .navbar-inverse .navbar-nav > li > a {
     color: gray;
@@ -48,6 +52,11 @@
   width: 70%;
   height: 70%;
   }
+
+  /* p {
+    display: inline-block;
+    transform: scale(1.1);
+  } */
 
   </style>
 </head>
@@ -76,7 +85,7 @@
     <div class="grid-container">      
       <div style="display: inline-block;">
         <img src="files/decor_prep1_left.png" alt="Description of your image" style="width: 220px; height: auto;"/>
-        <img src="files/decor_prep1_right.png" alt="Description of your image" style="width: 220px; height: auto;"/>       
+        <img src="files/decor_prep2_right.png" alt="Description of your image" style="width: 220px; height: auto;"/>       
         <img src="files/decor_prep2_left.png" alt="Description of your image" style="width: 220px; height: auto;"/>  
       </div>
     <div style="display: inline-block;">  
@@ -141,9 +150,9 @@
   </div>
   </div> 
     <div style="display: inline-block;">
-      <img src="files/decor_prep1_right.png" alt="Description of your image" style="width: 217px; height: auto;"/>
-      <img src="files/decor_prep1_left.png" alt="Description of your image" style="width: 217px; height: auto;"/>       
-      <img src="files/decor_prep2_right.png" alt="Description of your image" style="width: 217px; height: auto;"/>  
+      <img src="files/decor_prep1_right.png" alt="Description of your image" style="width: 210px; height: auto;"/>
+      <img src="files/decor_prep2_left.png" alt="Description of your image" style="width: 210px; height: auto;"/>       
+      <img src="files/decor_prep2_right.png" alt="Description of your image" style="width: 210px; height: auto;"/>  
   </div>
   </div>
   </div>
