--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
       color: darkblue;
     }
 
+    .nav.navbar-nav > li > a {
+      font-size: 18px; /* Set your desired font size here */
+    }
+
     /* Navbar link color */
   .navbar-inverse .navbar-nav > li > a {
     color: gray;
+    font-size: 18px;
   }
 
   /* Navbar link color on hover */
@@ -70,6 +75,11 @@
   .content-text1 {
     margin-left: 30px;
   }
+
+  /* p {
+    display: inline-block;
+    transform: scale(1.05);
+  } */
 
 
   </style>
