--- a/photography.html
+++ b/photography.html
@@ -133,8 +133,8 @@
           <div class="text-center">
             <p>coyote hills</a> </p>
           </div>
-          <img src="files/DSCF4413.JPG" alt="Description of the image" class="centered-image" />
-          <img src="files/DSCF4490.JPG" alt="Description of the image" class="centered-image" />
+          <img src="files/DSCF4413.jpg" alt="Description of the image" class="centered-image" />
+          <img src="files/DSCF4490.jpg" alt="Description of the image" class="centered-image" />
 
                 <!-- </div>
             </div>  -->
