fixing small issues

--- a/new_students.html
+++ b/new_students.html
@@ -150,7 +150,7 @@
           <p>Unfortunately, the world can be unjust, with the majority often defining what is considered ``normal" for the rest of us. However, the silver lining is that it's possible to adopt a different viewpoint. This isn't about gaslighting yourself into believing that everything that occurs is fair, but rather about choosing the high road when faced with unfairness. </a><br>
           <p>I want to point to this profound speech by David Foster, recommended by Bill Gates on LinkedIn: </a> </p> <a href="https://m.youtube.com/watch?v=OsAd4HGJS4o">Your Mind is an Excellend Servant, but a Terrible Master (David Foster)</a><br>
           <br>
-          <p>While designing this website, I contemplated adopting a less feminine appearance by not including a photo and refraining from using pink or pastel shades. Perhaps I will get more citations that way. However, I believe that feminism is for everyone, including scientists, and I aim to be a role model for younger female colleagues.</a><br>
+          <p>While designing this website, I contemplated adopting a less feminine appearance by not including a photo and refraining from using pink or pastel shades. Perhaps I will get more citations that way ;)  However, I believe that feminism is for everyone, including scientists, and I aim to be a role model for younger female colleagues.</a><br>
 
           <br>
           <h2>Teaching philosophy</h2>
@@ -169,7 +169,9 @@
           <br>
           <p>This philosophy was again passed to me from my Ph.D. advisor Misha Kazhdan. I believe interaction with students is something sounds trivial but difficult to implement. Misha is such a good teacher, who would try to catch every single face that looks confused in the classroom and go after them. It is dangerous to say “Understood" in his classroom when he asks “Understand?". Admittedly, it was a bit intimidating at the beginning. But it has been very beneficial for students. That way, I stopped pretending a know-it-all, and learned more.</a> </p>
 
+          <br>
           <h4>Learning happens when coding happens</h4>
+          <br>
           <p>I appreciate heavy coding courses as a student. Talk is cheap in this field. The plan is to do the same for my students. Even for research, strong coding skills help you implement your ideas faster, that way you would be more productive.</a> </p>
 
 	  <br>
