--- a/new_students.html
+++ b/new_students.html
@@ -8,6 +8,7 @@
 <html lang="en">
 <head>
   <title>Crane Chen</title>
+  <link rel="icon" href="files/favicon.png" type="image/png" sizes="60x60">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -87,7 +88,7 @@
   <div class="col-md-12">
     <div class="grid-container">      
       <div style="display: inline-block;">
-        <img src="files/decor_update_left.png" alt="Description of your image" style="width: 240px; height: auto;"/>
+        <img src="files/decor_prep3_left.png" alt="Description of your image" style="width: 240px; height: auto;"/>
                 </div>
     <div style="display: inline-block;">  
 
@@ -150,8 +151,8 @@
           <p>Unfortunately, the world can be unjust, with the majority often defining what is considered ``normal" for the rest of us. However, the silver lining is that it's possible to adopt a different viewpoint. This isn't about gaslighting yourself into believing that everything that occurs is fair, but rather about choosing the high road when faced with unfairness. </a><br>
           <p>I want to point to this profound speech by David Foster, recommended by Bill Gates on LinkedIn: </a> </p> <a href="https://m.youtube.com/watch?v=OsAd4HGJS4o">Your Mind is an Excellent Servant, but a Terrible Master (David Foster)</a><br>
           <br>
-          <p>Minorities are more likely to overreact when facing miscommunications. If this is in person, knowing when to cut off a conversation is crucial. Cutting off in time before either party overreacted builds your credence. If this is through email, stick with email manners described in <a href="https://matt.might.net/articles/how-to-email/">How to email</a>. Additional tips include: (1) Never send/reply to emails around midnight. Because that's when you tend to be emotional and send something that you regret. Recalling emails damage your credence. (2) Never start or participate any debates through emails. This is a no-winner war. (This ``Never" includes extremely difficult situations, e.g. misunderstanding/discriminating/underappreciating.) Not only is this bad manner, there is no hope to solve the problem this way with too much space for miscommunication.</a><br>
-          <br>
+          <!-- <p>Minorities are more likely to overreact when facing miscommunications. If this is in person, knowing when to cut off a conversation is crucial. Cutting off in time before either party overreacted builds your credence. If this is through email, stick with email manners described in <a href="https://matt.might.net/articles/how-to-email/">How to email</a>. Additional tips: (1) Never send/reply to emails around midnight. Because that's when you tend to be emotional and send something that you regret. Recalling emails damage your credence. (2) Never start or participate any debates through emails. This is a no-winner war. (This ``Never" includes extremely difficult situations, e.g. misunderstanding/discriminating/underappreciating.) Not only is this bad manner, there is no hope to solve the problem this way with too much space for miscommunication.</a><br>
+          <br> -->
           <p>While designing this website, I contemplated adopting a less feminine appearance by not including a photo and refraining from using pink or pastel shades. Perhaps I will get more citations that way ;)  However, I believe that feminism is for everyone, including scientists, and I aim to be a role model for younger female colleagues.</a><br>
 
           <br>
@@ -203,7 +204,7 @@
           </div>
         </div> 
           <div style="display: inline-block;">
-          <img src="files/decor_update_right.png" alt="Description of your image" style="width: 220px; height: auto;"/>
+          <img src="files/decor_prep3_right.png" alt="Description of your image" style="width: 210px; height: auto;"/>
       </div>
   </div>
 </div>
