--- a/photography.html
+++ b/photography.html
@@ -8,6 +8,7 @@
 <html lang="en">
 <head>
   <title>Crane Chen</title>
+  <link rel="icon" href="files/favicon.png" type="image/png" sizes="60x60">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -84,8 +85,8 @@
   <div class="col-md-12">
     <div class="grid-container">      
       <div style="display: inline-block;">
-        <img src="files/decor_prep1_left.png" alt="Description of your image" style="width: 220px; height: auto;"/>
-        <img src="files/decor_prep2_right.png" alt="Description of your image" style="width: 220px; height: auto;"/>       
+        <img src="files/decor_prep2_left.png" alt="Description of your image" style="width: 225px; height: auto;"/>
+        <img src="files/decor_prep2_right.png" alt="Description of your image" style="width: 225px; height: auto;"/>       
         <img src="files/decor_prep2_left.png" alt="Description of your image" style="width: 220px; height: auto;"/>  
       </div>
     <div style="display: inline-block;">  
@@ -130,11 +131,11 @@
           <img src="files/DSCF0090.JPG" alt="Description of the image" class="centered-image" />
           <img src="files/DSCF0150.JPG" alt="Description of the image" class="centered-image" />
           <img src="files/DSCF0172.JPG" alt="Description of the image" class="centered-image" />
-          <div class="text-center">
+          <!-- <div class="text-center">
             <p>coyote hills</a> </p>
           </div>
           <img src="files/DSCF4413.JPG" alt="Description of the image" class="centered-image" />
-          <img src="files/DSCF4490.JPG" alt="Description of the image" class="centered-image" />
+          <img src="files/DSCF4490.JPG" alt="Description of the image" class="centered-image" /> -->
 
                 <!-- </div>
             </div>  -->
@@ -150,9 +151,9 @@
   </div>
   </div> 
     <div style="display: inline-block;">
-      <img src="files/decor_prep1_right.png" alt="Description of your image" style="width: 210px; height: auto;"/>
-      <img src="files/decor_prep2_left.png" alt="Description of your image" style="width: 210px; height: auto;"/>       
-      <img src="files/decor_prep2_right.png" alt="Description of your image" style="width: 210px; height: auto;"/>  
+      <img src="files/decor_prep2_right.png" alt="Description of your image" style="width: 220px; height: auto;"/>
+      <img src="files/decor_prep2_left.png" alt="Description of your image" style="width: 220px; height: auto;"/>       
+      <img src="files/decor_prep2_right.png" alt="Description of your image" style="width: 220px; height: auto;"/>  
   </div>
   </div>
   </div>
