--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <html lang="en">
 <head>
   <title>Crane Chen</title>
+  <link rel="icon" href="files/favicon.png" type="image/png" sizes="60x60">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -85,6 +86,10 @@
     display: inline-block;
     transform: scale(1.05);
   } */
+
+  .navbar-inverse .navbar-toggle .icon-bar {
+    background-color: blue;
+  }
 
 
   </style>
