--- a/index.html
+++ b/index.html
@@ -91,7 +91,13 @@
     background-color: blue;
   }
 
+  .navbar-inverse .navbar-brand {
+    color: blue;
+  }
 
+  .navbar-inverse .navbar-brand:hover {
+    color: blue;
+  }
   </style>
 </head>
 <body>
@@ -102,6 +108,9 @@
   <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
 	  <div class="container">
 		<div class="navbar-header">
+
+      <a class="navbar-brand">Crane He Chen</a>
+
 		  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
