--- a/new_students.html
+++ b/new_students.html
@@ -146,7 +146,7 @@
           <br>
           <h4>General</h4>
           <br>
-          <p>Ph.D. is very short, it's more about appearing at right location at right time than about who's smarter than whom. While I don't see myself as an authority or an exemplary figure in this domain, I've been reflecting on my own path and realized there are some insights I would have appreciated knowing sooner. With that in mind, I've compiled the following advice.</a> </p>
+          <p>While I don't see myself as an authority or an exemplary figure in this domain, I've been reflecting on my own path and realized there are some insights I would have appreciated knowing sooner. Ph.D. is very short, it's more about appearing at right location at right time than about who's smarter than whom. With that in mind, I've compiled the following advice.</a> </p>
           <p>First, I point to a handbook from prof. Mark Dredze at Hopkins, the content of which I regret not reading earlier: </a> 
             <br>
             <a href="https://www.cs.jhu.edu/~mdredze/publications/HowtoBeaSuccessfulPhDStudent.1_2.pdf">How to be a successful Ph.D. student</a></p>
