--- a/photography.html
+++ b/photography.html
@@ -165,11 +165,11 @@
           <img src="files/DSCF0090.JPG" alt="Description of the image" class="centered-image" />
           <img src="files/DSCF0150.JPG" alt="Description of the image" class="centered-image" />
           <img src="files/DSCF0172.JPG" alt="Description of the image" class="centered-image" />
-          <!-- <div class="text-center">
+          <div class="text-center">
             <p>coyote hills</a> </p>
           </div>
-          <img src="files/DSCF4413.JPG" alt="Description of the image" class="centered-image" />
-          <img src="files/DSCF4490.JPG" alt="Description of the image" class="centered-image" /> -->
+          <img src="files/DSCF4413.JPG" alt="Description of the image" class="centered-image" /> 
+          <img src="files/DSCF4490.JPG" alt="Description of the image" class="centered-image" /> 
 
                 <!-- </div>
             </div>  -->
