--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <div class="content-container">
                   <img src="files/TotalCurvatureCalculator.png" alt="Image description" style="width: 100px; height: auto;">
                   <div class="content-text">
-                <strong>TotalCurvatureCalculator</strong>
+                    <strong><a href="https://github.com/HeCraneChen/total-curvature-estimation.git">TotalCurvatureCalculator</a></strong>
               <!-- <ul> -->
               <p>&bull; A C++ total curvature calculator works universally for both triangle meshes and point clouds, that is fast and robust.<br>
               <p>&bull; Potenetial upcoming new feature for popular libraries, submitting to Libigl and Open3D.<br>
@@ -267,7 +267,7 @@
                 <div class="content-container">
                 <img src="files/CurvaturePaper.png" alt="Image description" style="width: 200px; height: auto;">
                 <div class="content-text">
-                <strong>Estimating Discrete Total Curvature with Per Triangle Normal Variation</strong><br/>
+                <strong><a href="files/total_curvature_paper_small.pdf">Estimating Discrete Total Curvature with Per Triangle Normal Variation</a></strong><br/>
                 <!-- <ul> -->
                 <p>SIGGRAPH 2023<br>
                 <p>Crane Chen<br>
