--- a/new_students.html
+++ b/new_students.html
@@ -120,11 +120,14 @@
   <div class="row">
 
     <div class="col-md-2 hidden-sm hidden-xs">
-        <!-- <div class="grid-container">      
-        <div style="display: inline-block;"> -->
-        <img src="files/decor_prep3_left.png" alt="Description of your image" style="width: 240px; height: auto;"/>
-        <!-- </div> -->
-        <!-- <div style="display: inline-block;">   -->
+      <img class="center-block" src="files/torus.png" alt="Description of your image" style="width: 120px; height: auto;"/>
+      <img class="center-block" src="files/torus_knot.png" alt="Description of your image" style="width: 120px; height: auto;"/>       
+      <img class="center-block" src="files/torus.png" alt="Description of your image" style="width: 120px; height: auto;"/>
+      <img class="center-block" src="files/torus_knot2.png" alt="Description of your image" style="width: 120px; height: auto;"/>  
+      <!-- <img class="center-block" src="files/torus.png" alt="Description of your image" style="width: 120px; height: auto;"/>
+      <img class="center-block" src="files/torus_knot.png" alt="Description of your image" style="width: 120px; height: auto;"/>  
+      <img class="center-block" src="files/torus.png" alt="Description of your image" style="width: 120px; height: auto;"/>
+      <img class="center-block" src="files/torus_knot.png" alt="Description of your image" style="width: 120px; height: auto;"/>   -->
     </div>
 
       <!-- <div class="col-md-12">
@@ -239,8 +242,14 @@
         <!-- </div> -->
          
         <div class="col-md-2 hidden-sm hidden-xs">
-          <!-- <div style="display: inline-block;"> -->
-          <img src="files/decor_prep3_right.png" alt="Description of your image" style="width: 210px; height: auto;"/>
+          <img class="center-block" src="files/torus_knot.png" alt="Description of your image" style="width: 120px; height: auto;"/>
+          <img class="center-block" src="files/torus.png" alt="Description of your image" style="width: 120px; height: auto;"/>       
+          <img class="center-block" src="files/torus_knot.png" alt="Description of your image" style="width: 120px; height: auto;"/>
+          <img class="center-block" src="files/torus2.png" alt="Description of your image" style="width: 120px; height: auto;"/>  
+          <!-- <img class="center-block" src="files/torus_knot.png" alt="Description of your image" style="width: 120px; height: auto;"/>
+          <img class="center-block" src="files/torus.png" alt="Description of your image" style="width: 120px; height: auto;"/> 
+          <img class="center-block" src="files/torus_knot.png" alt="Description of your image" style="width: 120px; height: auto;"/>
+          <img class="center-block" src="files/torus.png" alt="Description of your image" style="width: 120px; height: auto;"/>  -->
         </div>
 
       </div>
