--- a/photography.html
+++ b/photography.html
@@ -118,24 +118,20 @@
   <div class="col-md-2 hidden-sm hidden-xs">
     <div class="grid-container">      
       <div style="display: inline-block;">
-        <img src="files/decor_prep2_left.png" alt="Description of your image" style="width: 225px; height: auto;"/>
-        <img src="files/decor_prep2_right.png" alt="Description of your image" style="width: 225px; height: auto;"/>       
-        <img src="files/decor_prep2_left.png" alt="Description of your image" style="width: 220px; height: auto;"/>  
+        <img class="center-block" src="files/torus.png" alt="Description of your image" style="width: 120px; height: auto;"/>
+        <img class="center-block" src="files/torus_knot.png" alt="Description of your image" style="width: 120px; height: auto;"/>       
+        <img class="center-block" src="files/torus.png" alt="Description of your image" style="width: 120px; height: auto;"/>
+        <img class="center-block" src="files/torus_knot.png" alt="Description of your image" style="width: 120px; height: auto;"/>  
+        <img class="center-block" src="files/torus.png" alt="Description of your image" style="width: 120px; height: auto;"/>
+        <img class="center-block" src="files/torus_knot.png" alt="Description of your image" style="width: 120px; height: auto;"/>  
+        <img class="center-block" src="files/torus.png" alt="Description of your image" style="width: 120px; height: auto;"/>
+        <img class="center-block" src="files/torus_knot.png" alt="Description of your image" style="width: 120px; height: auto;"/>  
+        <!-- <img src="files/decor_prep2_left.png" alt="Description of your image" style="width: 210px; height: auto;"/>   -->
       </div>
     </div>
   </div>
 
-  <!-- <div class="col-md-12">
-    <div class="grid-container">      
-      <div></div>  
-      <div> -->
-    <!-- <div class="container"> -->
-
-            <!-- Entries Column -->
-            <!-- <div class="col-md-10" style="height: 100vh;"> -->
-                
-                <!-- Main Image -->
-                <!-- <img class="img-responsive" src="photo.gif" alt=""><br> -->
+ 
                 
   <div class="col-md-8">
 
@@ -186,9 +182,15 @@
 
   <div class="col-md-2 hidden-sm hidden-xs">
     <div style="display: inline-block;">
-      <img src="files/decor_prep2_right.png" alt="Description of your image" style="width: 220px; height: auto;"/>
-      <img src="files/decor_prep2_left.png" alt="Description of your image" style="width: 220px; height: auto;"/>       
-      <img src="files/decor_prep2_right.png" alt="Description of your image" style="width: 220px; height: auto;"/>  
+      <img class="center-block" src="files/torus_knot.png" alt="Description of your image" style="width: 120px; height: auto;"/>
+      <img class="center-block" src="files/torus.png" alt="Description of your image" style="width: 120px; height: auto;"/>       
+      <img class="center-block" src="files/torus_knot.png" alt="Description of your image" style="width: 120px; height: auto;"/>
+      <img class="center-block" src="files/torus.png" alt="Description of your image" style="width: 120px; height: auto;"/>  
+      <img class="center-block" src="files/torus_knot.png" alt="Description of your image" style="width: 120px; height: auto;"/>
+      <img class="center-block" src="files/torus.png" alt="Description of your image" style="width: 120px; height: auto;"/> 
+      <img class="center-block" src="files/torus_knot.png" alt="Description of your image" style="width: 120px; height: auto;"/>
+      <img class="center-block" src="files/torus.png" alt="Description of your image" style="width: 120px; height: auto;"/> 
+      <!-- <img src="files/decor_prep2_right.png" alt="Description of your image" style="width: 210px; height: auto;"/>   -->
     </div>
   </div>
 
