--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <div class="content-container">
                 <img src="files/CurvaturePaper.png" alt="Image description" style="width: 200px; height: auto;">
                 <div class="content-text">
-                <strong><a href="files/total_curvature_paper_small.pdf">Estimating Discrete Total Curvature with Per Triangle Normal Variation</a></strong><br/>
+                <strong><a href="https://arxiv.org/pdf/2305.12653.pdf">Estimating Discrete Total Curvature with Per Triangle Normal Variation</a></strong><br/>
                 <!-- <ul> -->
                 <p>SIGGRAPH 2023<br>
                 <p>Crane Chen<br>
