--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <li><a href="#softwares">Softwares</a></li> 
         <li><a href="#publications">Publications</a></li> 
         <li><a href="./files/CraneAcademicCV.pdf">CV</a></li>
-        <li><a href="./files/LaplacianCourse_Syllabus.pdf">Teaching</a></li>
+        <li><a href="teaching.html">Teaching</a></li>
         <li><a href="#sideprojects">Side Projects</a></li> 
         <li><a href="new_students.html">New Students</a></li>
         <li><a href="photography.html">Photography</a></li>
