--- a/photography.html
+++ b/photography.html
@@ -101,7 +101,7 @@
           <li><a href="index.html#softwares">Softwares</a></li> 
 				  <li><a href="index.html#publications">Publications</a></li> 
 				  <li><a href="./files/CraneAcademicCV.pdf">CV</a></li>
-          <li><a href="./files/LaplacianCourse_Syllabus.pdf">Teaching</a></li>
+          <li><a href="teaching.html">Teaching</a></li>
           <li><a href="index.html#sideprojects">Side Projects</a></li> 
           <li><a href="new_students.html">New Students</a></li>
           <li><a href="#photography">Photography</a></li> 
