--- a/teaching.html
+++ b/teaching.html
@@ -84,9 +84,9 @@
         </tr>
         <tr>
             <td>Week 1</td>
-            <td>Overview & motivation</td>
-            <td></td>
-            <td></td>
+            <td><a href="./files/Week1.pdf" target="_blank">Overview and motivation</a></td>
+            <td><a href="https://openusd.org/release/intro.html" target="_blank">Introduction to USD</a></td>
+            <td>coming soon</td>
         </tr>
         <tr>
             <td>Week 2</td>
