--- a/teaching.html
+++ b/teaching.html
@@ -79,7 +79,7 @@
         <tr>
             <th>Date</th>
             <th>Subject</th>
-            <th>Related Reading</th>
+            <th>Related Resources</th>
             <th>Video</th>
         </tr>
         <tr>
@@ -91,7 +91,7 @@
         <tr>
             <td>Week 2</td>
             <td>Data</td>
-            <td></td>
+            <td><a href="./files/DSCF7047.JPG" target="_blank">Pelican</a>,<a href="./files/DSCF5701.JPG" target="_blank">Lizard</a>,<a href="./files/Beetle.ply" target="_blank">Beetle</a>, <a href="./files/Rebel.ply" target="_blank">Rebel</a>, <a href="./files/HappyDragon.ply" target="_blank">HappyDragon</a></td>
             <td></td>
         </tr>
         <tr>
