--- a/teaching.html
+++ b/teaching.html
@@ -90,7 +90,7 @@
         </tr>
         <tr>
             <td>Week 2</td>
-            <td>Data</td>
+            <td><a href="./files/Week2.pdf" target="_blank">Data</a></td>
             <td><a href="./files/DSCF7047.JPG" target="_blank">Pelican</a>,<a href="./files/DSCF5701.JPG" target="_blank">Lizard</a>,<a href="./files/Beetle.ply" target="_blank">Beetle</a>, <a href="./files/Rebel.ply" target="_blank">Rebel</a>, <a href="./files/HappyDragon.ply" target="_blank">HappyDragon</a></td>
             <td></td>
         </tr>
