--- a/teaching.html
+++ b/teaching.html
@@ -96,7 +96,7 @@
         </tr>
         <tr>
             <td>Week 3</td>
-            <td>Using CMake to compile a C++ codebase, and run it</td>
+            <td><a href="./files/Week3.pdf" target="_blank">CMake</a></td>
             <td></td>
             <td></td>
         </tr>
