--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <div style="font-family: 'Noteworthy', sans-serif; font-size: 32px; text-align: center;"><b>Crane He Chen</b></div>
                 <p style="font-family: 'Noteworthy', sans-serif; font-size: 18px; text-align: center;">
                   <b>Ph.D. candidate in Computer Graphics</b> <br>
-		   <b>half-time researcher at Adobe / half-time teaching faculty at Hopkins</b> <br>
+		   <b>half-time researcher @ Adobe / half-time teaching faculty @ Hopkins</b> <br>
                   <b>hchen136@jhu.edu</b> <br>
                </p>
 
