--- a/teaching.html
+++ b/teaching.html
@@ -91,13 +91,13 @@
         <tr>
             <td>Week 2</td>
             <td><a href="./files/Week2.pdf" target="_blank">Data</a></td>
-            <td><a href="./files/DSCF7047.JPG" target="_blank">Pelican</a>,<a href="./files/DSCF5701.JPG" target="_blank">Lizard</a>,<a href="./files/Beetle.ply" target="_blank">Beetle</a>, <a href="./files/Rebel.ply" target="_blank">Rebel</a>, <a href="./files/HappyDragon.ply" target="_blank">HappyDragon</a></td>
+            <td><a href="./files/DSCF7047.JPG" target="_blank">Pelican</a>,<a href="./files/DSCF5701.JPG" target="_blank">Lizard</a>,<a href="./files/Beetle.ply" target="_blank">Beetle</a>, <a href="./files/Rebel.ply" target="_blank">Rebel</a>, <a href="./files/HappyDragon.ply" target="_blank">HappyDragon</a>,<a href="https://github.com/HeCraneChen/exploring_laplacian_graphics_course/tree/main/week2" target="_blank">solution</a></td>
             <td></td>
         </tr>
         <tr>
             <td>Week 3</td>
             <td><a href="./files/Week3.pdf" target="_blank">CMake</a></td>
-            <td></td>
+            <td><a href="https://github.com/HeCraneChen/exploring_laplacian_graphics_course/tree/main/week3" target="_blank">HelloGraphics</a></td>
             <td></td>
         </tr>
         <tr>
