--- a/teaching.html
+++ b/teaching.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Teaching Information - Computer Graphics Course</title>
+    <title>Crane's Intro to Graphics Course</title>
     <style>
         h1 {
           font-size: 24px; /* Adjust size as needed */
