--- a/teaching.html
+++ b/teaching.html
@@ -126,7 +126,7 @@
         </tr>
         <tr>
           <td>Week 8</td>
-          <td>Guest Lecture(Ruben Wiersma from TU Delft)</td>
+          <td>Guest Lecture (<a href="https://rubenwiersma.nl/" target="_blank">Ruben Wiersma</a> from TU Delft)</td>
           <td></td>
           <td></td>
         </tr>
