--- a/teaching.html
+++ b/teaching.html
@@ -138,7 +138,7 @@
         </tr>
         <tr>
             <td>Week 10</td>
-            <td>Art Contest</td>
+            <td>Art Contest (openning talks: Cary Philips from ILM)</td>
             <td></td>
             <td></td>
         </tr>
