--- a/teaching.html
+++ b/teaching.html
@@ -78,8 +78,8 @@
     <table>
         <tr>
             <th>Date</th>
-            <th>Slides</th>
-            <th>Other Resources</th>
+            <th>Lecture Slides</th>
+            <th>Codebase / Other Resources</th>
             <th>Video</th>
         </tr>
         <tr>
