--- a/teaching.html
+++ b/teaching.html
@@ -102,7 +102,7 @@
         </tr>
         <tr>
             <td>Week 4</td>
-            <td>“The Laplacian” for 2D images</td>
+            <td>“The Laplacian” Basics, 1D, 2D, 3D</td>
             <td></td>
             <td></td>
         </tr>
