--- a/teaching.html
+++ b/teaching.html
@@ -144,6 +144,14 @@
         </tr>
     </table>
 
+<h2>Extra Gears for Art</h2>
+<h3>Algorithms</h3> 
+SweptVolumes (by Silvia Sellan, Noam Aigerman, Alec Jacobson) <a href="https://github.com/sgsellan/swept-volumes" target="_blank">code</a> <a href="https://www.dgp.toronto.edu/projects/swept-volumes/" target="_blank">more info</a>
+CubicStylization (by Derek Liu, Alec Jacobson) <a href="https://github.com/HTDerekLiu/CubicStylization_Cpp" target="_blank">code</a> <a href="https://www.dgp.toronto.edu/projects/cubic-stylization/" target="_blank">more info</a>
+<h3>Data</h3> 
+coming soon...
+
+
 
 <h2>Resources for Reference</h2>
 <p><strong>Don’t need to freak out if you find the contents below quite advanced.</strong></p>
