--- a/teaching.html
+++ b/teaching.html
@@ -102,13 +102,13 @@
         </tr>
         <tr>
             <td>Week 4</td>
-            <td><a href="./files/Week4.pdf" target="_blank">“The Laplacian" Basics, 1D, 2D, 3D</a></td>
+            <td><a href="./files/Week4.pdf" target="_blank">“The Laplacian" basics, 1D, 2D, 3D</a></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <td>Week 5</td>
-            <td>“The Laplacian” for 3D models part1</td>
+            <td><a href="./files/Week5.pdf" target="_blank">“The Laplacian" for 3D models part1</a></td>
             <td></td>
             <td></td>
         </tr>
