--- a/teaching.html
+++ b/teaching.html
@@ -80,77 +80,82 @@
             <th>Date</th>
             <th>Lecture Slides</th>
             <th>Codebase / Other Resources</th>
-            <th>Video</th>
         </tr>
         <tr>
             <td>Week 1</td>
             <td><a href="./files/Week1.pdf" target="_blank">Overview and motivation</a></td>
             <td><a href="https://openusd.org/release/intro.html" target="_blank">Introduction to USD</a></td>
-            <td>coming soon</td>
         </tr>
         <tr>
             <td>Week 2</td>
             <td><a href="./files/Week2.pdf" target="_blank">Data</a></td>
             <td><a href="./files/DSCF7047.JPG" target="_blank">Pelican</a>,<a href="./files/DSCF5701.JPG" target="_blank">Lizard</a>,<a href="./files/Beetle.ply" target="_blank">Beetle</a>, <a href="./files/Rebel.ply" target="_blank">Rebel</a>, <a href="./files/HappyDragon.ply" target="_blank">HappyDragon</a>, <a href="https://github.com/HeCraneChen/exploring_laplacian_graphics_course/tree/main/week2" target="_blank">Solution</a></td>
-            <td></td>
         </tr>
         <tr>
             <td>Week 3</td>
             <td><a href="./files/Week3.pdf" target="_blank">CMake</a></td>
             <td><a href="https://github.com/HeCraneChen/exploring_laplacian_graphics_course/tree/main/week3" target="_blank">HelloGraphics</a></td>
-            <td></td>
         </tr>
         <tr>
             <td>Week 4</td>
             <td><a href="./files/Week4.pdf" target="_blank">“The Laplacian" basics, 1D, 2D, 3D</a></td>
-            <td></td>
-            <td></td>
+            <td><a href="https://www.cs.cmu.edu/~kmcrane/Projects/Other/SwissArmyLaplacian.pdf" target="_blank">Laplace-Beltrami: The Swiss Army Knife of Geometry Processing</a></td> 
         </tr>
         <tr>
             <td>Week 5</td>
             <td><a href="./files/Week5.pdf" target="_blank">“The Laplacian" for 3D models part1</a></td>
-            <td></td>
-            <td></td>
+            <td><a href="https://www.cs.cmu.edu/~kmcrane/Projects/Other/SwissArmyLaplacian.pdf" target="_blank">Laplace-Beltrami: The Swiss Army Knife of Geometry Processing</a></td> 
         </tr>
         <tr>
           <td>Week 6</td>
-          <td>“The Laplacian” for 3D models part2</td>
-          <td></td>
-          <td></td>
+          <td><a href="./files/Week6.pdf" target="_blank">“The Laplacian" for 3D models part2</a></td>
+          <td><a href="https://www.cs.jhu.edu/~misha/Fall09/5-mcf.pdf" target="_blank">Differential Geometry: Mean Curvature Flow</a></td> 
         </tr>
         <tr>
           <td>Week 7</td>
-          <td>“The Laplacian” as second derivative</td>
-          <td></td>
+          <td>Lab</td>
           <td></td>
         </tr>
         <tr>
           <td>Week 8</td>
           <td>Guest Lecture (<a href="https://rubenwiersma.nl/" target="_blank">Ruben Wiersma</a> from TU Delft)</td>
           <td></td>
-          <td></td>
         </tr>
         <tr>
           <td>Week 9</td>
-          <td>Lab</td>
-          <td></td>
+          <td>Paper Reading</td>
           <td></td>
         </tr>
         <tr>
             <td>Week 10</td>
             <td>Art Contest (opening speech: Cary Philips from ILM)</td>
             <td></td>
-            <td></td>
         </tr>
     </table>
 
 <h2>Extra Gears for Art</h2>
-<h3>Algorithms</h3> 
-SweptVolumes (by Silvia Sellan, Noam Aigerman, Alec Jacobson) <a href="https://github.com/sgsellan/swept-volumes" target="_blank">code</a> <a href="https://www.dgp.toronto.edu/projects/swept-volumes/" target="_blank">more info</a>
-CubicStylization (by Derek Liu, Alec Jacobson) <a href="https://github.com/HTDerekLiu/CubicStylization_Cpp" target="_blank">code</a> <a href="https://www.dgp.toronto.edu/projects/cubic-stylization/" target="_blank">more info</a>
-<h3>Data</h3> 
-coming soon...
+<h4>Algorithms</h4> 
 
+<ul>
+  <li><a href="https://github.com/sgsellan/swept-volumes" target="_blank">SweptVolume</a>
+  <li><a href="https://github.com/HTDerekLiu/CubicStylization_Cpp" target="_blank">CubicStylization</a>
+  <li><a href="https://github.com/HeCraneChen/curvature-qslim-mesh-decimation" target="_blank">MeshSimplification</a>
+</ul>
+
+<h4>Data</h4> 
+<ul>
+  <li><a href="./files/Beetle.ply" target="_blank">Beetle</a>
+  <li><a href="./files/Rebel.ply" target="_blank">Rebel</a>
+  <li><a href="./files/HappyDragon.ply" target="_blank">HappyDragon</a>
+  <li><a href="./files/BigBuckBunny.ply" target="_blank">BigBuckBunny</a>
+  <li><a href="https://www.cs.cmu.edu/~kmcrane/Projects/ModelRepository/" target="_blank">Ogre</a>
+  <li>...... search any 3D models on line and be creative</a>
+</ul>
+
+<h4>Visualization Tool</h4> 
+<ul>
+  <li>check out the doc of <a href="https://polyscope.run/py/" target="_blank">Polyscope</a>
+</ul>
 
 
 <h2>Resources for Reference</h2>
