--- a/teaching.html
+++ b/teaching.html
@@ -118,8 +118,8 @@
         </tr>
         <tr>
           <td>Week 8</td>
-          <td>Guest Lecture (<a href="https://rubenwiersma.nl/" target="_blank">Ruben Wiersma</a> from TU Delft)</td>
-          <td></td>
+          <td><a href="https://surfdrive.surf.nl/files/index.php/s/IVVOhOMG3p9GDrj" target="_blank">Recording</a> of (<a href="https://rubenwiersma.nl/" target="_blank">Ruben Wiersma</a>'s Blender Lecture)</td>
+          <td><a href="https://www.youtube.com/playlist?list=PLjEaoINr3zgFX8ZsChQVQsuDSjEqdWMAD" target="_blank">Blender Guru</a>, <a href="https://media.disneyanimation.com/uploads/production/publication_asset/48/asset/s2012_pbs_disney_brdf_notes_v3.pdf" target="_blank">physically based shading at Disney</a></td> 
         </tr>
         <tr>
           <td>Week 9</td>
