--- a/teaching.html
+++ b/teaching.html
@@ -37,7 +37,7 @@
     <p>Th 9:00AM - 10:15AM, Homewood Campus, Bloomberg 178</p>
 
     <h2>Zoom Link</h2>
-    <p><a href="https://wse.zoom.us/j/95364532144" target="_blank">https://wse.zoom.us/j/95364532144</a></p>
+    <p><a href="https://wse.zoom.us/j/95364532144" target="_blank">https://JHUBlueJays.zoom.us/j/4403528409?pwd=bnhlRDhLRU5wbnAvMHA1a09TTVE2dz09</a></p>
 
     <h2>Syllabus</h2>
     <p><a href="./files/LaplacianCourse_Syllabus.pdf" target="_blank">Download Syllabus</a></p>
